--- a/index.css
+++ b/index.css
@@ -1067,6 +1067,7 @@ textarea{
     font-family: Outfit;
     font-weight: 700;
     font-style: Bold;
+    margin-top: 100px;
     font-size: 45px;
     line-height: 100%;
     letter-spacing: 10%;
